# morsetrainer

./: pyproject.toml
src/morsetrainer/: __init__.py  __main__.py
src/morsetrainer/core/: __init__.py  context.py  morse.py
src/morsetrainer/storage/: __init__.py
src/morsetrainer/tui/: __init__.py  app.py  app.tcss
src/morsetrainer/tui/icr/: app.py  game_panel.py  help_screen.py  history_panel.py  settings_modal.py  status_bar.py
